--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,16 @@
     height: 40px;
     font-weight: bolder;
     font-size: 20px;
-    background-color: lightseagreen;
+    background-color: brown;
+    color: white
 }
 
 .buttons:hover{
-    background-color:white;
+    background-color:brown;
     margin-right: 0px;
+    opacity: 60%;
+    cursor:pointer;
+    cursor:hand;
 
 }
 
@@ -56,3 +60,11 @@
     height: 100px;
 }
 
+/* [NORMALIZATION] */
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: arial, sans-serif;
+}
