--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,9 @@
     font-weight: bolder;
     font-size: 20px;
     background-color: brown;
-    color: white
+    color: white;
+    margin-top: 28px;
+    border:none;
 }
 
 .buttons:hover{
@@ -29,20 +31,23 @@
 }
 
 .wine-div {
-    border: 3px solid salmon;
     background-color: salmon;
     height: 370px;
     width: 350px;
-    border-radius: 10px 10px 0px 0px; 
+    border-radius: 15px 15px 0px 0px; 
     text-align: center;
     margin-left: 40px;
     margin-right: 40px;
     margin-top: -30px;
+    padding: 0;
  
 }
 .wine-div h2 {
     opacity: 60%;
     background-color: white;
+    margin-top: 0;
+    border-radius: 15px 15px 0px 0px; 
+
 
 }
 
